src/alto-ui/Button/Button.scss
@import '../scss/_inc';

$color-button-base: $blue-60;
$color-button-accent: $blue-80;

$color-white-button-focus: $blue-30; // Focus ring for white buttons

// ===================================
// Mixins

// Solid buttons
@mixin button--solid($color-default, $color-hover, $color-focus, $color-active, $color-font: white) {
  background: $color-default;
  color: $color-font;
  border-color: $color-default;

  &:focus {
    box-shadow: 0 0 0 3px $color-focus;
  }

  &:hover,
  &.button--active {
    background: $color-hover;
    border-color: $color-hover;
  }

  &:active {
    box-shadow: 0 0 0 3px $color-focus, inset 0 2px 0 $color-active;
  }

  &:disabled,
  &.button--disabled {
    background: $coolgrey-30;
    border-color: $coolgrey-30;
  }
}

// Outline buttons
@mixin button--outline($color-default, $color-hover, $color-hover-dark, $color-focus, $color-active) {
  background: transparent;
  color: $color-default;
  border-color: $color-default;

  &:focus {
    box-shadow: 0 0 0 3px $color-focus;
  }
  &:active {
    background: transparent;
    box-shadow: 0 0 0 3px $color-focus, inset 0 2px 0 $color-active;
  }
  &:hover,
  &.button--active {
    background: $color-hover;
    border-color: $color-hover-dark;
    color: $color-hover-dark;
  }
  &:disabled,
  &.button--disabled {
    background: transparent;
    color: $coolgrey-30;
    border-color: $coolgrey-30;
  }
}

// Flat Buttons
@mixin button--flat($color-default, $color-hover, $color-focus) {
  color: $color-default;

  &,
  &:hover,
  &:active,
  &:disabled,
  &.button--disabled,
  &.button--active {
    background: transparent;
    border-color: transparent;
  }

  &:focus {
    box-shadow: 0 0 0 3px $color-focus;
  }

  &:hover,
  &.button--active {
    color: $color-hover;
  }

  &:active {
    color: $color-default;
  }

  &:disabled,
  &.button--disabled {
    color: $coolgrey-30;
  }
}

.button {
  @include button--solid($blue, $blue-80, $blue-30, $blue-90);
  font-weight: $font-weight-regular;
  font-size: $font-size-medium;
  font-family: $font-family-alt;
  padding: 0.5625rem 1.25rem;
  line-height: $line-height-button;
  border: 1px solid transparent;
  border-radius: $border-radius-default;
  text-transform: uppercase;
  text-decoration: none;
  text-align: center;
  letter-spacing: 0.06em;
  cursor: pointer;
  transition: $duration-quick $timing-function all;
  &:focus {
    outline: none;
  }

  &:disabled,
  &.button--disabled {
    cursor: not-allowed;
  }
}

.button--success {
  @include button--solid($green, $green-80, $green-30, $green-90);
}

.button--danger {
  @include button--solid($red, $red-80, $red-30, $red-90);
}

.button--white {
  @include button--solid($white, rgba($white, 0.8), $color-white-button-focus, rgba($white, 0.9), $color-text-default);
}

.button--small {
  font-size: $font-size-small;
  padding: 0.1875rem 0.6875rem;
}

.button--large {
  font-size: $font-size-large;
  padding: 0.9375rem 1.8125rem;
}

.button--nowrap {
  padding-top: 0;
  padding-bottom: 0;
  line-height: 2.25rem;
  height: 2.25rem;
  white-space: nowrap;

  &.button--small {
    line-height: 1.5rem;
    height: 1.5rem;
  }

  &.button--large {
    line-height: 3rem;
    height: 3rem;
  }
}

.button--block {
  display: block;
  width: 100%;
}

// Outline

.button--outline {
  @include button--outline($blue, $blue-20, $blue-70, $blue-30, $blue-20);
}

.button--outline.button--success {
  @include button--outline($green, $green-20, $green-70, $green-30, $green-20);
}

.button--outline.button--danger {
  @include button--outline($red, $red-20, $red-70, $red-30, $red-20);
}

.button--outline.button--white {
  @include button--outline($white, rgba($white, 0.1), $white, $color-white-button-focus, rgba($white, 0.3));
}

// Flat

.button--flat {
  @include button--flat($blue, $blue-80, $blue-20);
  background: transparent;
  border-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.button--flat.button--success {
  @include button--flat($green, $green-80, $green-20);
}

.button--flat.button--danger {
  @include button--flat($red, $red-80, $red-20);
}

.button--flat.button--white {
  @include button--flat($white, rgba($white, 0.8), $color-white-button-focus);
}

